--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <title>Squid's Recipes</title>
     </head>
     <body>
-        <h1>Squid's Recipes</h1>
+        <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/cocktail-meatballs.html">Cocktail Meatballs</a></li>
-            <li><a href="./recipe/spicy-sausage-balls.html">Spicy Sausage Balls</a></li>
+            <li><a href="./recipes/spicy-sausage-balls.html">Spicy Sausage Balls</a></li>
+            <li><a href="./recipes/party-sliders.html">Party Sliders</a></li>
         </ul>
     </body>
 </html>
