--- a/recipes/spicy-sausage-balls.html
+++ b/recipes/spicy-sausage-balls.html
@@ -6,5 +6,26 @@
     </head>
     <body>
         <h1>Spicy Sausage Balls</h1>
+        <img src="../img/sausage.jpg" alt="spicy sausage balls" width="427" height="640">
+        <h2>Description</h2>
+        <p>These sausage balls are as good as Bisquick sausage balls, but without the carbs and gluten. 
+        They are also keto friendly! Eat them fresh out of the oven or refrigerate or freeze for later use.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 pound bulk spicy pork sausage</li>
+            <li>1 cup shredded sharp Cheddar cheese, or more to taste</li>
+            <li>1 cup almond flour</li>
+            <li>2 tablespoons coconut flour</li>
+            <li>2 (.25 ounce) packages unflavored gelatin</li>
+            <li>1 large egg</li>
+            <li>1/2 teaspoon baking powder</li>
+        </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li>Preheat the oven to 325 degrees F (165 degrees C). Line a jelly roll pan with parchment paper.</li>
+            <li>Combine sausage, Cheddar cheese, almond flour, coconut flour, gelatin, egg, and baking powder in a large bowl. Mix to combine using your hands, a stand mixer, or a food processor. 
+            Form mixture into uniformly-sized balls (about 1 ½-inch diameter) and place on the prepared pan.</li>
+            <li>Bake in the preheated oven until cooked through, 23 to 28 minutes. Remove sausage balls and let cool on the pan until oil is reabsorbed, about 5 minutes.</li>
+        </ol>
     </body>
 </html>
